fix:removed extra fontsize css fro longQuoteRightAlign2 #188

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -591,7 +591,6 @@ wpn-detail-view:has(span[data-bs-toggle="popover"]:hover) details:not([open]) .s
 #textcontent-pb .typescriptLongQuoteVerseLeading,
 #textcontent-pb .typescriptLongQuoteTitle,
 #textcontent-pb .typescriptLongQuoteTitle2,
-#textcontent-pb .longQuoteRightAlign2, 
 #textcontent-pb .typescriptLongQuoteRightAlign2,
 #textcontent-pb .typescriptLongQuoteRightAlign,
 #textcontent-pb .typescriptLongQuoteIndent,
